mdapi/unpackaged/hemanpackage/objects/Drink_Order__c.object
<CustomObject>
    <fields>
        <fullName>Flavor__c</fullName>
        <label>Flavor</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sweet Lemon</fullName>
                </value>
                <value>
                    <fullName>Salt Lemon</fullName>
                </value>
                <value>
                    <fullName>Sweet Lime Soda</fullName>
                </value>
                <value>
                    <fullName>Salt Lime Soda</fullName>
                </value>
                <value>
                    <fullName>Pepper Lemon Masala</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>12</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Size__c</fullName>
        <label>Size</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Small</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Large</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Drink Order</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Flavor__c</columns>
        <columns>Size__c</columns>
        <columns>Price__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>D-{0000}</displayFormat>
        <label>Drink Order Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Drink Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>